@@ -22,6 +22,7 @@ Version 1.10.1+svn:
  * Miscellaneous and bug fixes:
    * Made the Wolf raise its head if and only if it is submerged
    * Fixed bug #19505: broken stone bridge transitions
+   * Backported: The Pandora scaling speedup patches.
 
 Version 1.10.1:
  * Add-ons server:
